tdf#94816: fixed some problems in the mail merge wizard

Some disposeAndClear have been added as calling dialogs in the wizard
like select address list, new address list, match fields crashed in
dbg build in shutdown because the dialogs were still alive.
The wizard is now deleted on Cancel which didn't work anymore.
The timeout of the preview control of page 5 has been changed
as the preview didn't even appear on Windows in a debug build
The timeout handler was called after the wizard has been closed and
lead to a crash.

Change-Id: I9cd01f39347744bda31a312f695d27eefa077721